--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,1 @@
-# eventsourcing[sqlalchemy]==8.1.1dev0
-git+git://github.com/johnbywater/eventsourcing@develop#egg=eventsourcing [sqlalchemy]
+eventsourcing[sqlalchemy]==8.2.0
